--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -180,6 +180,7 @@ body {
 @import './components/reviews';
 @import './components/callback';
 @import './components/pagging';
+@import './components/popup';
 
 /*
     Подключение стилей отдельных блоков страницы
