--- a/#src/templates/theme/components/header-single.html
+++ b/#src/templates/theme/components/header-single.html
@@ -27,7 +27,10 @@
         </div>
       </div>
       <div class="header-under__action">
-        <!-- <p>Томск</p> -->
+        <button class="subdomain-button" id="subdomain-button" data-popup="subdomain">
+          <img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="" />
+          <span id="city">Томск</span>
+        </button>
         <button type="button">
           Заказать звонок
           <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
