--- a/#src/scss/global.scss
+++ b/#src/scss/global.scss
@@ -1,22 +1,27 @@
 ._lock {
   overflow: hidden;
 
-  body {
-    position: relative;
-  }
+  // body {
+  //   position: relative;
 
-  body::after {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($color: $mainColor, $alpha: 0);
-    backdrop-filter: blur(3px);
-    z-index: 100;
-    cursor: pointer;
-  }
+  // }
+
+  // body::after {
+  //   content: '';
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: rgba($color: $mainColor, $alpha: 0);
+  //   backdrop-filter: blur(3px);
+  //   z-index: 100;
+  //   cursor: pointer;
+  // }
+}
+
+body {
+  font-family: $fontFamily;
 }
 
 ._btn {
