--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -183,6 +183,7 @@
       font-size: 16px;
       font-weight: 300;
       line-height: 20px;
+      font-family: "Montserrat", sans-serif;
     }
 
     a {
