--- a/#src/scss/pages/catalog/product.scss
+++ b/#src/scss/pages/catalog/product.scss
@@ -61,6 +61,27 @@
     line-height: 39px;
     margin-bottom: 50px;
   }
+
+  // .product__color
+
+  &__color {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  // .product__color-item
+
+  &__color-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-basis: 200;
+    border: 1px solid rgba($color: $accent, $alpha: .5);
+    border-radius: 5px;
+    padding: 15px 20px;
+    // flex-grow: 1;
+  }
 }
 
 .product-card {
@@ -183,6 +204,7 @@
     font-weight: 600;
     line-height: 20px;
   }
+
 }
 
 .info-card {
