--- a/#src/templates/theme/pages/catalog/category.html
+++ b/#src/templates/theme/pages/catalog/category.html
@@ -13,13 +13,9 @@
               <p class="filter__label">{{ char.text_name }}:</p>
               {% for char_value in chars %} {% if char_value.char_name.text_name == char.text_name %}
               <div class="form__group-boolean">
-                <input
-                  type="checkbox"
-                  name="{{ char_value.char_name.filter_name }}-{{ char_value.id }}"
-                  class="form__controls-checkbox filter-checkbox"
-                  id="filter-{{ char_value.id }}"
-                  value="{{ char_value.char_value }}"
-                />
+                <input type="checkbox" name="{{ char_value.char_name.filter_name }}-{{ char_value.id }}"
+                  class="form__controls-checkbox filter-checkbox" id="filter-{{ char_value.id }}"
+                  value="{{ char_value.char_value }}" />
                 <label for="filter-{{ char_value.id }}" class="form__boolean-label"> {{ char_value.char_value }}</label>
               </div>
               {% endif %} {% endfor %}
@@ -29,24 +25,31 @@
           </form>
         </div>
         <div class="category-details__col">
-          <button type="button" class="category-details__filter"><i class="fa-solid fa-arrow-up-wide-short"></i></button>
+          <button type="button" class="category-details__filter"><i
+              class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
           <div class="index-catalog__cards">
             {% for product in products %}
             <div class="index-catalog__card card">
               <div class="card__image">
-                {% if product.image %} {% thumbnail product.image "230x230" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image" alt="{{product.model}}" title="{{product.model}}" />
+
+                {% comment %}
+
+                {% if product.get_image_url %}
+                {% thumbnail product.get_image_url "230x230" format="WEBP" crop="center" as im %}
+                <img src="{{ im }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image"
+                  alt="{{product.model}}" title="{{product.model}}" />
                 {% endthumbnail %} {% else %}
                 <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
-                {% endif %}
+                {% endif %}{% endcomment %}
               </div>
               <div class="card__content">
                 <a href="#" class="card__content-title">{{ product.model }}</a>
-                {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %}
-                <p class="card__content-char">Материал: {{ chr }}</p>
-                {% endif %} {% endfor %}
-                <div class="card__content-price">От {{ product.price }} ₽</div>
+                {% for chr in product.chars.all %}
+                {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p class="card__content-char">
+                  Материал: {{ chr }}</p>
+                  {% endif %} {% endfor %}
+                  <div class="card__content-price">От {{ product.price }} ₽</div>
               </div>
               <a href="{{ product.get_absolute_url }}" class="card__content-link">Подробнее</a>
             </div>
@@ -61,19 +64,18 @@
       </div>
       {% if products.paginator.count > 15 %}
       <div class="pagging">
-        <a
-          href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}"
-          >«</a
-        >
+        <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
+          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
         <ul class="pagging__list">
-          {% for page in products.paginator.page_range %} {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
-          <li>
-            <a href="?{% chenge_params page=page %}" class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
-          </li>
-          {% endif %} {% endfor %}
+          {% for page in products.paginator.page_range %}
+          {% if page >= products.number|add:-2 and page <= products.number|add:2 %} <li>
+            <a href="?{% chenge_params page=page %}"
+              class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
+            </li>
+            {% endif %} {% endfor %}
         </ul>
-        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}" class="pagging__arrow">»</a>
+        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}"
+          class="pagging__arrow">»</a>
       </div>
       {% endif %}
     </div>
