--- a/main/core/theme/mb/templates/base.html
+++ b/main/core/theme/mb/templates/base.html
@@ -26,11 +26,12 @@
 
 <body>
   <div class="wrapper">
-    {% if request.path == '/' %} {% include "./components/header.html" %} {% else %}
+    {% if request.path == '/' %}
+    {% include "./components/header.html" %} {% else %}
     {% include "./components/header-single.html" %} {% endif %} {% block content %}
-    {% endblock %}
-    {% include "./components/footer.html" %} {% include "./components/notification/modal.html" %}
-    {% include "./components/mini-cart.html" %}
+    {% endblock %} {% include "./components/footer.html" %}
+    {% include "./components/notification/modal.html" %}
+    {% include "./components/mini-cart.html" %} {% include "./components/popup.html" %}
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
