--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -1263,6 +1263,10 @@ section {
   font-weight: 600;
 }
 
+.map-widget-layout-view__controls {
+  display: none !important;
+}
+
 /*
     Подключение стилей отдельных компонентов
 */
@@ -2125,76 +2129,61 @@ body::after {
   }
 }
 
-.contact {
-  padding: 0px 0px 60px;
-  background-color: #fdfdfd !important;
+.contact__title span {
+  color: #41a2d0;
 }
 
-.contact__row {
-  border-radius: 24px 24px 0px 0px;
-  padding: 50px 0px;
+.contact__note {
+  padding: 30px;
+  border-radius: 10px;
+  border: 1px solid rgba(65, 162, 208, 0.2);
+  box-shadow: 0px 8px 7px rgba(65, 162, 208, 0.1);
+  font-size: 18px;
+  line-height: 150%;
 }
 
-.contact__row-top {
+.contact__note a {
+  font-weight: 600;
+  color: #41a2d0;
+}
+
+.contact__grid {
   display: grid;
-  grid-template-columns: 25% 1fr;
-  align-content: center;
-  padding: 0px 0px 30px;
+  grid-template-columns: 1fr 1fr 40%;
+  gap: 20px;
+  margin-top: 60px;
 }
 
-.contact__row-label {
-  color: #3a67c0;
+.item-contact {
+  box-shadow: 0px 8px 7px rgba(65, 162, 208, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.contact__row-dot {
+.item-contact:not(:last-child) {
+  padding: 40px;
+}
+
+.item-contact__title {
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.item-contact__row {
   display: flex;
   align-items: center;
   gap: 10px;
-  color: #4d69a0;
+  padding: 10px 0px;
 }
 
-.contact__row-dot::before {
-  content: "";
-  width: 10px;
-  height: 10px;
-  background-color: #4d69a0;
-  border-radius: 50%;
-}
-
-.contact__row-questions p {
-  font-size: 58px;
-  text-wrap: balance;
-  font-weight: 300;
-  letter-spacing: -4px;
-}
-
-.contact__row-bottom {
-  padding: 40px 0px 40px;
+.item-contact__row-info {
   display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  gap: 10px;
 }
 
-.contact__row-col {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.contact__row-info {
-  font-size: 20px;
-  text-wrap: balance;
-  font-weight: 600;
-}
-
-.contact__map {
-  padding: 0px 60px;
-}
-
-.contact__map iframe {
-  overflow: hidden;
-  border-radius: 46px;
-  box-shadow: 0 20px 60px 2px rgba(149, 144, 135, 0.15);
+.item-contact__row-big {
+  font-weight: 500;
 }
 
 .login {
@@ -3221,10 +3210,6 @@ body::after {
   .index-category__item:nth-child(17) {
     grid-column: span 3;
   }
-
-  .contact__container {
-    width: 100%;
-  }
 }
 
 @media screen and (min-width: 920px) {
@@ -3333,20 +3318,6 @@ body::after {
 
   .index-category__title {
     font-size: 25px;
-  }
-
-  .contact__row-top {
-    grid-template-columns: 1fr;
-    gap: 30px;
-  }
-
-  .contact__row-questions p {
-    font-size: 30px;
-    letter-spacing: 1px;
-  }
-
-  .contact__map {
-    padding: 0px 15px;
   }
 }
 
