--- a/#src/scss/pages/contact/contact.scss
+++ b/#src/scss/pages/contact/contact.scss
@@ -1,118 +1,87 @@
-.page-contact {}
-
 .contact {
-  padding: 0px 0px 60px;
-  background-color: #fdfdfd !important;
 
   // .contact__container
 
-  &__container {
-    @media screen and (min-width: 768px) {
-      width: 100%;
+  &__container {}
+
+  // .contact__title
+
+  &__title {
+    span {
+      color: rgba($color: $accent, $alpha: 1.0);
     }
   }
 
-  // .contact__row
+  // .contact__note
+
+  &__note {
+    padding: 30px;
+    border-radius: 10px;
+    border: 1px solid rgba($color: $accent, $alpha: .2);
+    box-shadow: 0px 8px 7px rgba($color: $accent, $alpha: .1);
+    font-size: 18px;
+    line-height: 150%;
+
+    a {
+      font-weight: 600;
+      color: rgba($color: $accent, $alpha: 1.0);
+    }
+  }
+
+  // .contact__grid
+
+  &__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 40%;
+    gap: 20px;
+    margin-top: 60px;
+  }
+
+  // .contact__item
+
+  &__item {}
+}
+
+.item-contact {
+  box-shadow: 0px 8px 7px rgba($color: $accent, $alpha: .1);
+  border-radius: 10px;
+  overflow: hidden;
+
+  &:not(:last-child) {
+    padding: 40px;
+  }
+
+  // .item-contact__title
+
+  &__title {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 30px;
+  }
+
+  // .item-contact__row
 
   &__row {
-    border-radius: 24px 24px 0px 0px;
-    // background-color: #fdfdfd;
-    padding: 50px 0px;
-    // margin: 0px 10px;
-  }
-
-  // .contact__row-top
-
-  &__row-top {
-    display: grid;
-    grid-template-columns: 25% 1fr;
-    align-content: center;
-    padding: 0px 0px 30px;
-
-    @media screen and (max-width: 768px) {
-      grid-template-columns: 1fr;
-      gap: 30px;
-    }
-  }
-
-  // .contact__row-label
-
-  &__row-label {
-    color: #3a67c0;
-
-    &:first-child {}
-  }
-
-  // .contact__row-dot
-  &__row-dot {
     display: flex;
     align-items: center;
     gap: 10px;
-    color: #4d69a0;
-
-    &::before {
-      content: '';
-      width: 10px;
-      height: 10px;
-      background-color: #4d69a0;
-      border-radius: 50%;
-    }
+    padding: 10px 0px;
   }
 
-  // .contact__row-questions
-
-  &__row-questions {
-    p {
-      font-size: 58px;
-      text-wrap: balance;
-      font-weight: 300;
-      letter-spacing: -4px;
-
-      @media screen and (max-width: 768px) {
-        font-size: 30px;
-        letter-spacing: 1px;
-      }
-    }
-  }
-
-  // .contact__row-bottom
-
-  &__row-bottom {
-    padding: 40px 0px 40px;
-    display: grid;
-    gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-  }
-
-  // .contact__row-col
-
-  &__row-col {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  // .contact__row-info
+  // .item-contact__row-info
 
   &__row-info {
-    font-size: 20px;
-    text-wrap: balance;
-    font-weight: 600;
+    display: grid;
+    gap: 10px;
   }
 
-  // .contact__map
-  &__map {
-    padding: 0px 60px;
+  // .item-contact__row-big
 
-    @media screen and (max-width: 768px) {
-      padding: 0px 15px;
-    }
-
-
-    iframe {
-      overflow: hidden;
-      border-radius: 46px;
-      box-shadow: 0 20px 60px 2px rgba(149, 144, 135, 0.15);
-    }
+  &__row-big {
+    font-weight: 500;
   }
+
+  // .item-contact__row-small
+
+  &__row-small {}
 }
