--- a/main/core/theme/mb/templates/components/header.html
+++ b/main/core/theme/mb/templates/components/header.html
@@ -28,7 +28,7 @@
           <li class="nav__item"><a href="#">Оплата</a></li>
           <li class="nav__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
           <li class="nav__item"><a href="{% url 'about' %}">О нас</a></li>
-          <li class="nav__item"><a href="#">Контакты</a></li>
+          <li class="nav__item"><a href="{% url 'contact' %}">Контакты</a></li>
         </ul>
       </nav>
     </div>
