--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="top-main__right">
           <div class="top-main__right-row">
-            <button class="subdomain-button" id="subdomain-button">
+            <button class="subdomain-button" id="subdomain-button" data-popup="subdomain">
               <img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="" />
               <span id="city">Томск</span>
             </button>
