--- a/main/core/theme/mb/templates/pages/contact.html
+++ b/main/core/theme/mb/templates/pages/contact.html
@@ -45,6 +45,16 @@
 							<p class="item-contact__row-big">Сегодня</p>
 							<p class="item-contact__row-small">c 09:00 до 18:00</p>
 						</div>
+						<div class="item-contact__hidden">
+							<p>В воскресенье режим работы по догоовренности</p>
+							<!-- <p>Пн: c 09:00 до 18:00</p>
+							<p>Вт: c 09:00 до 18:00</p>
+							<p>Ср: c 09:00 до 18:00</p>
+							<p>Чт: c 09:00 до 18:00</p>
+							<p>Пт: c 09:00 до 18:00</p>
+							<p>Сб: c 09:00 до 18:00</p>
+							<p>Вс: c 09:00 до 18:00</p> -->
+						</div>
 					</div>
 					<div class="item-contact__row">
 						<img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="Иконка телефона" title="Иконка телефона">
