mobile version main section home page

--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -181,6 +181,7 @@ body {
 @import './components/callback';
 @import './components/pagging';
 @import './components/popup';
+@import './components/mobile-nav';
 
 /*
     Подключение стилей отдельных блоков страницы
