--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,20 +1,43 @@
 .header {
-  width: 100%;
   position: fixed;
-  top: 30px;
+  width: 100%;
+  bottom: 79px;
   left: 0;
-  z-index: 99;
+  z-index: 150;
+  pointer-events: none;
+  transition: $animation_speed;
 
   // .header--single
 
   &--single {
-    position: sticky;
+    @media screen and (min-width: 920px) {
+      position: sticky;
+    }
   }
 
+  &._active {
+    bottom: 79px;
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  @media screen and (min-width: 920px) {
+    top: 30px;
+  }
+
+  @media screen and (max-width: 920px) {
+    opacity: 0;
+    position: fixed;
+    bottom: -100%;
+  }
 
   // .header__container
 
-  &__container {}
+  &__container {
+    @media screen and (max-width: 920px) {
+      display: contents;
+    }
+  }
 
   // .header__inner
 
@@ -23,6 +46,10 @@
     align-items: center;
     border: 1px solid rgba($color: $accent, $alpha: .1);
     border-radius: 5px;
+
+    @media screen and (min-width: 920px) {
+      height: 46px;
+    }
   }
 
   // .header__callback
@@ -32,16 +59,33 @@
     align-items: center;
     gap: 5px;
     background-color: $white;
-    padding: 12px 22px;
-    border-radius: 5px 0px 0px 5px
+    height: 100%;
+    width: 210px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px 0px 0px 5px;
+
+    @media screen and (max-width: 920px) {
+      display: none;
+    }
   }
 }
 
 .nav {
   background-color: rgba($color: $accent, $alpha: 1.0);
   flex: 1 1 auto;
+  height: 100%;
   padding: 0px 47px;
   border-radius: 0px 5px 5px 0px;
+
+  @media screen and (max-width: 1042px) {
+    padding: 0px 15px;
+  }
+
+  @media screen and (max-width: 920px) {
+    padding: 30px 15px;
+  }
 
   // .nav__list
 
@@ -49,6 +93,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 920px) {
+      flex-direction: column;
+    }
   }
 
   // .nav__item
@@ -64,6 +112,10 @@
       padding: 13px 0px;
       font-size: 16px;
       color: rgba($color: $white, $alpha: 1.0);
+
+      @media screen and (max-width: 1042px) {
+        font-size: 14px;
+      }
     }
 
     img {
