--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -2,6 +2,10 @@
   position: relative;
   padding: 149px 0px 146px;
 
+  @media screen and (max-width: 920px) {
+    padding: 50px 0px;
+  }
+
   // .main__container
 
   &__container {
@@ -22,6 +26,7 @@
     height: 100%;
     object-fit: cover;
     object-position: top center;
+    z-index: -1;
   }
 
   // .main__content
@@ -36,9 +41,13 @@
   color: $white;
   margin-bottom: 50px;
 
-  @media screen and (max-width: 768px) {
-    grid-template-columns: 1fr;
+  @media screen and (max-width: 920px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
+
+
 
   // .top-main__left
 
@@ -46,6 +55,14 @@
     display: flex;
     align-items: center;
     gap: 52px;
+
+    @media screen and (max-width: 920px) {
+      order: 1;
+    }
+
+    @media screen and (max-width: 520px) {
+      gap: 15px;
+    }
   }
 
   // .top-main__item
@@ -58,7 +75,17 @@
 
   // .top-main__address
 
-  &__address {}
+  &__address {
+    white-space: nowrap;
+
+    @media screen and (max-width: 520px) {
+      font-size: 12px;
+    }
+
+    @media screen and (max-width: 390px) {
+      font-size: 10px;
+    }
+  }
 
   // .top-main__phone
 
@@ -66,6 +93,11 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    white-space: nowrap;
+
+    @media screen and (max-width: 520px) {
+      font-size: 12px;
+    }
   }
 
   // .top-main__middle
@@ -77,7 +109,20 @@
 
   // .top-main__logo
 
-  &__logo {}
+  &__logo {
+
+    img {
+      @media screen and (max-width: 650px) {
+        width: 86px;
+        height: 86px;
+      }
+
+      @media screen and (max-width: 550px) {
+        width: 56px;
+        height: 56px;
+      }
+    }
+  }
 
   // .top-main__right
 
@@ -85,6 +130,10 @@
     display: flex;
     flex-direction: column;
     gap: 29px;
+
+    @media screen and (max-width: 920px) {
+      display: none;
+    }
   }
 
   // .top-main__right-row
@@ -120,6 +169,14 @@
       font-weight: 600;
       font-size: inherit;
     }
+
+    @media screen and (max-width: 920px) {
+      font-size: 40px;
+    }
+
+    @media screen and (max-width: 768px) {
+      font-size: 32px;
+    }
   }
 
   // .content-main__link
@@ -134,6 +191,12 @@
     background-color: rgba($color: $accent, $alpha: 1.0);
     border-radius: 5px;
     margin-top: 70px;
+
+    @media screen and (max-width: 520px) {
+      width: 220px;
+      margin-top: 40px;
+      font-size: 14px;
+    }
   }
 }
 
@@ -148,9 +211,11 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(2, 680px);
+    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+    grid-gap: 32px;
+    grid-auto-flow: dense;
     grid-template-rows: repeat(2, 300px);
-    gap: 10px;
+    // gap: 10px;
   }
 
   // .index-stock__item
@@ -163,14 +228,17 @@
     padding: 25px 30px;
     border-radius: 10px;
     overflow: hidden;
-    color: rgba($color: $white, $alpha: 1.0)
+    color: rgba($color: $white, $alpha: 1.0);
+    grid-column: 3 / 5;
   }
 
   // .index-stock__item--first
 
   &__item--first {
-    grid-column: span 1;
-    grid-row: span 2;
+    // grid-column: span 1;
+    // grid-row: span 2;
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
 
     .index-stock__item-title {
       font-size: 56px;
