--- a/#src/templates/theme/base.html
+++ b/#src/templates/theme/base.html
@@ -31,7 +31,9 @@
     {% include "./components/header-single.html" %} {% endif %} {% block content %}
     {% endblock %} {% include "./components/footer.html" %}
     {% include "./components/notification/modal.html" %}
-    {% include "./components/mini-cart.html" %} {% include "./components/popup.html" %}
+    {% include "./components/mini-cart.html" %}
+    {% include "./components/popup.html" %}
+    {% include "./components/mobile-nav.html" %}
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
