--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="footer">
+<footer class="footer" style="display: none">
   <div class="footer__container">
     <div class="footer__inner">
       <div class="footer__logo">
