--- a/main/core/theme/mb/templates/components/map.html
+++ b/main/core/theme/mb/templates/components/map.html
@@ -1,4 +1,4 @@
-<section class="index-map">
+<section class="index-map" style="display: none">
   <div class="index-map__container">
     <div class="index-map__inner">
       <iframe
