mobile version index-stock block

--- a/#src/templates/theme/pages/index.html
+++ b/#src/templates/theme/pages/index.html
@@ -51,7 +51,7 @@
     </div>
   </section>
 
-  <section class="index-stock" style="display: none">
+  <section class="index-stock">
     <div class="index-stock__container">
       <div class="index-stock__grid">
         <div class="index-stock__item index-stock__item--first">
