--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -159,7 +159,7 @@
   // .content-main__title
 
   &__title {
-    font-size: 72px;
+    font-size: clamp(26px, 4vw, 72px);
     max-width: 565px;
     line-height: 120%;
     text-transform: uppercase;
@@ -170,13 +170,13 @@
       font-size: inherit;
     }
 
-    @media screen and (max-width: 920px) {
-      font-size: 40px;
-    }
+    // @media screen and (max-width: 920px) {
+    //   font-size: 40px;
+    // }
 
-    @media screen and (max-width: 768px) {
-      font-size: 32px;
-    }
+    // @media screen and (max-width: 768px) {
+    //   font-size: 32px;
+    // }
   }
 
   // .content-main__link
@@ -210,12 +210,17 @@
   // .index-stock__grid
 
   &__grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-    grid-gap: 32px;
-    grid-auto-flow: dense;
-    grid-template-rows: repeat(2, 300px);
-    // gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    @media screen and (min-width: 990px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+      grid-gap: 32px;
+      grid-auto-flow: dense;
+      grid-template-rows: repeat(2, 300px);
+    }
   }
 
   // .index-stock__item
@@ -229,21 +234,29 @@
     border-radius: 10px;
     overflow: hidden;
     color: rgba($color: $white, $alpha: 1.0);
-    grid-column: 3 / 5;
+
+
+    @media screen and (min-width: 990px) {
+      grid-column: 3 / 5;
+    }
+
+    @media screen and (max-width: 990px) {
+      min-height: 250px;
+    }
   }
 
   // .index-stock__item--first
 
   &__item--first {
-    // grid-column: span 1;
-    // grid-row: span 2;
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
+    @media screen and (min-width: 990px) {
+      grid-column: 1 / 3;
+      grid-row: 1 / 3;
 
-    .index-stock__item-title {
-      font-size: 56px;
-      line-height: 120%;
-      font-weight: 700;
+      .index-stock__item-title {
+        font-size: 56px;
+        line-height: 120%;
+        font-weight: 700;
+      }
     }
   }
 
@@ -281,6 +294,10 @@
     line-height: 140%;
     font-weight: 700;
     color: rgba($color: $accent, $alpha: 1.0);
+
+    @media screen and (max-width: 520px) {
+      font-size: 40px;
+    }
   }
 }
 
