--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -313,7 +313,7 @@ html.lock body::before {
 }
 
 .content-main__title {
-  font-size: 72px;
+  font-size: clamp(26px, 4vw, 72px);
   max-width: 565px;
   line-height: 120%;
   text-transform: uppercase;
@@ -342,11 +342,9 @@ html.lock body::before {
 }
 
 .index-stock__grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  grid-gap: 32px;
-  grid-auto-flow: dense;
-  grid-template-rows: repeat(2, 300px);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .index-stock__item {
@@ -358,18 +356,6 @@ html.lock body::before {
   border-radius: 10px;
   overflow: hidden;
   color: white;
-  grid-column: 3/5;
-}
-
-.index-stock__item--first {
-  grid-column: 1/3;
-  grid-row: 1/3;
-}
-
-.index-stock__item--first .index-stock__item-title {
-  font-size: 56px;
-  line-height: 120%;
-  font-weight: 700;
 }
 
 .index-stock__item-img {
@@ -3352,6 +3338,31 @@ body::after {
   }
 }
 
+@media screen and (min-width: 990px) {
+  .index-stock__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+    grid-gap: 32px;
+    grid-auto-flow: dense;
+    grid-template-rows: repeat(2, 300px);
+  }
+
+  .index-stock__item {
+    grid-column: 3/5;
+  }
+
+  .index-stock__item--first {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+
+  .index-stock__item--first .index-stock__item-title {
+    font-size: 56px;
+    line-height: 120%;
+    font-weight: 700;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .category-details__col .close {
     display: none;
@@ -3408,6 +3419,12 @@ body::after {
   }
 }
 
+@media screen and (max-width: 990px) {
+  .index-stock__item {
+    min-height: 250px;
+  }
+}
+
 @media screen and (max-width: 920px) {
   .main {
     padding: 50px 0px;
@@ -3425,10 +3442,6 @@ body::after {
 
   .top-main__right {
     display: none;
-  }
-
-  .content-main__title {
-    font-size: 40px;
   }
 
   .header {
@@ -3459,10 +3472,6 @@ body::after {
 }
 
 @media screen and (max-width: 768px) {
-  .content-main__title {
-    font-size: 32px;
-  }
-
   .index-slider {
     padding: 0px 20px 60px;
   }
@@ -3554,6 +3563,10 @@ body::after {
     width: 220px;
     margin-top: 40px;
     font-size: 14px;
+  }
+
+  .index-stock__item-discount {
+    font-size: 40px;
   }
 }
 
