--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -71,7 +71,7 @@
     </div>
   </section>
 
-  <section class="index-catalog" style="display: none">
+  <section class="index-catalog">
     <div class="index-catalog__container">
       <h2 class="index-catalog__title">Каталог</h2>
       <div class="index-catalog__inner">
