--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -4,7 +4,7 @@
   bottom: 79px;
   left: 0;
   z-index: 150;
-  pointer-events: none;
+  // pointer-events: none;
   transition: $animation_speed;
 
   // .header--single
