--- a/#src/scss/admin/page.scss
+++ b/#src/scss/admin/page.scss
@@ -1,6 +1,6 @@
 .page {
   flex: 1 1 auto;
-  background-color: rgba($color: $bodyColor, $alpha: 1.0);
+  background-color: rgba($color: #f2f7fb, $alpha: 1.0);
 
   // .page__title
 
