--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -364,7 +364,7 @@
 
   &__cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
     gap: 40px;
     width: 100%;
   }
