--- a/#src/templates/theme/pages/catalog/category.html
+++ b/#src/templates/theme/pages/catalog/category.html
@@ -6,50 +6,41 @@
         <div class="category-details__col" id="filter-category">
           <button type="button" class="close" id="close-filter">X</button>
           {{ min_price_product }}
-          <form action="" method="GET" class="filter form">
-            <p class="filter__label">Фильтрация</p>
-            {% comment %}{% for char in char_name %}
+          <form method="GET" class="filter-form">
+            {% for field in filter_form %}
             <div class="filter__body">
-              <p class="filter__label">{{ char.text_name }}:</p>
-              {% for char_value in chars %} {% if char_value.char_name.text_name == char.text_name %}
+              <label class="filter__label">{{ field.label }}</label>
+              {% for checkbox in field %}
               <div class="form__group-boolean">
-                <input type="checkbox" name="{{ char_value.char_name.filter_name }}-{{ char_value.id }}"
-                  class="form__controls-checkbox filter-checkbox" id="filter-{{ char_value.id }}"
-                  value="{{ char_value.char_value }}" />
-                <label for="filter-{{ char_value.id }}" class="form__boolean-label"> {{ char_value.char_value }}</label>
+                {{ checkbox.tag }}
+                <label class="checkbox-label" for="{{ checkbox.id_for_label }}">{{ checkbox.choice_label }}</label>
               </div>
-              {% endif %} {% endfor %}
+              {% endfor %}
             </div>
-            {% endfor %} {% endcomment %}
-            <button type="submit" class="form__submit _btn" id="apply-filter">Применить</button>
+            {% endfor %}
+            <button type=" submit" class="filter__submit">Фильтровать</button>
           </form>
         </div>
         <div class="category-details__col">
-          <button type="button" class="category-details__filter"><i
-              class="fa-solid fa-arrow-up-wide-short"></i></button>
+          <button type="button" class="category-details__filter"><i class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
           <div class="index-catalog__cards">
             {% for product in products %}
             <div class="index-catalog__card card">
               <div class="card__image">
-
-                {% comment %}
-
-                {% if product.get_image_url %}
-                {% thumbnail product.get_image_url "230x230" format="WEBP" crop="center" as im %}
-                <img src="{{ im }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image"
-                  alt="{{product.model}}" title="{{product.model}}" />
+                <img src="{{ product.image.url }}" alt="" />
+                {% comment %} {{ product.image.url }} {% if product.image %} {% thumbnail product.image "230x230" format="WEBP" crop="center" as im %}
+                <img src="{{ im }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image" alt="{{product.model}}" title="{{product.model}}" />
                 {% endthumbnail %} {% else %}
                 <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
-                {% endif %}{% endcomment %}
+                {% endif %} {% endcomment %}
               </div>
               <div class="card__content">
                 <a href="#" class="card__content-title">{{ product.model }}</a>
-                {% for chr in product.chars.all %}
-                {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p class="card__content-char">
-                  Материал: {{ chr }}</p>
-                  {% endif %} {% endfor %}
-                  <div class="card__content-price">От {{ product.price }} ₽</div>
+                {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %}
+                <p class="card__content-char">Материал: {{ chr }}</p>
+                {% endif %} {% endfor %}
+                <div class="card__content-price">От {{ product.price }} ₽</div>
               </div>
               <a href="{{ product.get_absolute_url }}" class="card__content-link">Подробнее</a>
             </div>
@@ -64,18 +55,19 @@
       </div>
       {% if products.paginator.count > 15 %}
       <div class="pagging">
-        <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
+        <a
+          href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
+          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}"
+          >«</a
+        >
         <ul class="pagging__list">
-          {% for page in products.paginator.page_range %}
-          {% if page >= products.number|add:-2 and page <= products.number|add:2 %} <li>
-            <a href="?{% chenge_params page=page %}"
-              class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
-            </li>
-            {% endif %} {% endfor %}
+          {% for page in products.paginator.page_range %} {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
+          <li>
+            <a href="?{% chenge_params page=page %}" class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
+          </li>
+          {% endif %} {% endfor %}
         </ul>
-        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow">»</a>
+        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}" class="pagging__arrow">»</a>
       </div>
       {% endif %}
     </div>
