--- a/main/core/admin/css/style.css
+++ b/main/core/admin/css/style.css
@@ -326,7 +326,7 @@ ol {
 
 .page {
   flex: 1 1 auto;
-  background-color: #f4f6fa;
+  background-color: #f2f7fb;
 }
 
 .page__title {
@@ -1054,5 +1054,36 @@ ol {
   background-color: white;
   box-shadow: 0px 0px 4px rgba(38, 53, 61, 0.1);
   border-radius: 6px;
+}
+
+.gallery__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.gallery__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 15px;
+  background-color: #f7fafc;
+}
+
+.gallery__image {
+  width: 152px;
+  height: 152px;
+}
+
+.gallery__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery__name {
+  font-size: 12px;
 }
 /*# sourceMappingURL=maps/style.css.map */
