--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -7,26 +7,19 @@
         <div class="category-details__col" id="filter-category">
           <button type="button" class="close" id="close-filter">X</button>
           {{ min_price_product }}
-          <form action="" method="GET" class="filter form">
-            <p class="filter__label">Фильтрация</p>
-            {% for char in char_name %}
+          <form method="GET" class="filter-form">
+            {% for field in filter_form %}
             <div class="filter__body">
-              <p class="filter__label">{{ char.text_name }}:</p>
-              {% for char_value in chars %} {% if char_value.char_name.text_name == char.text_name %}
+              <label class="filter__label">{{ field.label }}</label>
+              {% for checkbox in field %}
               <div class="form__group-boolean">
-                <input
-                  type="checkbox"
-                  name="{{ char_value.char_name.filter_name }}-{{ char_value.id }}"
-                  class="form__controls-checkbox filter-checkbox"
-                  id="filter-{{ char_value.id }}"
-                  value="{{ char_value.char_value }}"
-                />
-                <label for="filter-{{ char_value.id }}" class="form__boolean-label"> {{ char_value.char_value }}</label>
+                {{ checkbox.tag }}
+                <label class="checkbox-label" for="{{ checkbox.id_for_label }}">{{ checkbox.choice_label }}</label>
               </div>
-              {% endif %} {% endfor %}
+              {% endfor %}
             </div>
             {% endfor %}
-            <button type="submit" class="form__submit _btn" id="apply-filter">Применить</button>
+            <button type=" submit" class="filter__submit">Фильтровать</button>
           </form>
         </div>
         <div class="category-details__col">
